Work with material elements

--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
   {{/unless}}
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="theme-color" content="#000000">
   <link rel="manifest" href="/manifest.webapp">
@@ -26,11 +27,13 @@
     }
   </script>
   {{/if}}
-  
+
+
+
 </head>
 <body>
   <app-root>Loading...</app-root>
-  
+
     {{#if environment.production}}
       <script src="/app-concat.js" async></script>
     {{else}}
@@ -43,6 +46,6 @@
         }).catch(console.error.bind(console));
       </script>
     {{/if}}
-  
+
 </body>
 </html>
